--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 
 <body>
  <header>
-    <a href="./index.html" target="_blank">
-       WEBSTUDIO
-    </a>
-    
+ 
     <nav>
+      <a href="./index.html" target="_blank">
+         WebStudio
+      </a>
         <ul>
             <li><a href="">Studio</a></li>
             <li><a href="">Portfolio</a></li>
             <li><a href="">Contacts</a></li>
         </ul>
     </nav>
-    <adress>
+    <address>
         <ul>
             <li>
                 <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -30,12 +30,14 @@
                 <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
             </li>
         </ul>
-    </adress>
+    </address>
  </header>
  <main>
-    <h1>Effective Solutions for Your Business</h1>
-    <button type="button">Order Service</button>
-    <section>
+   <section1>
+     <h1>Effective Solutions for Your Business</h1>
+     <button type="button">Order Service</button>
+   </section1>
+    <section2>
      <ul>
         <li>
           <h3>Strategy</h3>
@@ -55,8 +57,8 @@
             <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
         </li>
      </ul>
-    </section>
-    <section>
+    </section2>
+    <section3>
        <h2>What are we doing</h2>
      <ul>
         <li>
@@ -69,8 +71,8 @@
            <img src="./images/Rectangle71(1).jpg" alt="phone and laptop" width="360" height="300">
         </li>
      </ul>
-    </section>
-    <section>
+    </section3>
+    <section4>
       <h2>Our team</h2>
         <ul>
            <li>
@@ -94,15 +96,14 @@
             <p>UI Designer</p>
            </li>
         </ul>
-    </section>
+    </section4>
  </main>
  <footer>
- </footer>
- <a href="./index.html" target="_blank">
-    WEBSTUDIO
- </a>
+   <a href="./index.html" target="_blank">WebStudio</a>
  <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 
+ </footer>
+ 
 </body>
 
 </html>
