--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     </address>
  </header>
  <main>
-   <section1>
+   <section>
      <h1>Effective Solutions for Your Business</h1>
      <button type="button">Order Service</button>
-   </section1>
-    <section2>
+   </section>
+    <section>
      <ul>
         <li>
           <h3>Strategy</h3>
@@ -57,8 +57,8 @@
             <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
         </li>
      </ul>
-    </section2>
-    <section3>
+    </section>
+    <section>
        <h2>What are we doing</h2>
      <ul>
         <li>
@@ -71,8 +71,8 @@
            <img src="./images/Rectangle71(1).jpg" alt="phone and laptop" width="360" height="300">
         </li>
      </ul>
-    </section3>
-    <section4>
+    </section>
+    <section>
       <h2>Our team</h2>
         <ul>
            <li>
@@ -96,7 +96,7 @@
             <p>UI Designer</p>
            </li>
         </ul>
-    </section4>
+    </section>
  </main>
  <footer>
    <a href="./index.html" target="_blank">WebStudio</a>
