--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
      </ul>
     </section>
     <section>
-      <h2>Our team</h2>
+      <h2>Our Team</h2>
         <ul>
            <li>
              <img src="./images/img.jpg" alt="Mark Guerrero" width="264" height="260">
